--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Deadpoolio!</title>
 </head>
 <body>
-<h1>Hello Mr.Pool , Hope you're having a good day!</h1>
+<h1>Mr.Pool , Hope you're having a good day! Fooling around.</h1>
 </body>
 </html>
