--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Mr.Pool , Hope you're having a good day!Howdy!</h1>
-<link href="structure-only-after.html">AFTER</link>
-<link href="structure-only-before.html">BEFORE</link>
+<a href="structure-only-after.html">AFTER</a>
+<a href="structure-only-before.html">BEFORE</a>
 </body>
 </html>
