--- a/site/structure-only-after.html
+++ b/site/structure-only-after.html
@@ -10,7 +10,7 @@
     <footer>
       <hr>
       <p style="text-align: center;" 
-         onhover="alert('EMAILING US IS USELESS!!');">
+         onclick="alert('EMAILING US IS USELESS!!');">
          Tech Support: yeah.right@server-is-down.com
       </p>
     </footer>
